test/fixtures/error/07-generic-param/input.ts
import mint from "mintz";

export function f<T extends string>() {
  return mint<T>();
}
